# focus_sprint_coach

./: .gitignore  Dockerfile.railway
backend/: .env.example  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 20260302_000001_init.py  20260302_000002_core_models_auth.py  20260302_000003_ai_usage.py  20260302_000004_acceptance_align.py  20260302_000005_analytics_events.py  20260302_000006_feedback.py  20260302_000007_subscriptions.py  20260307_000008_guest_users.py  ff464a83fce7_add_task_scheduling.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: adaptive.py  ai.py  auth.py  billing.py  feedback.py  history.py  me.py  orchestrator.py  sprints.py  stats.py  tasks.py  version.py
backend/app/core/: logging.py  security.py  settings.py
backend/app/db/: session.py
backend/app/db/models/: __init__.py  ai_usage.py  analytics_event.py  feedback.py  microstep.py  sprint.py  sprint_event.py  sprint_reflection.py  subscription.py  task.py  user.py
backend/app/observability/: analytics.py
backend/app/schemas/: ai.py  feedback.py  microstep.py  sprint.py  task.py  user.py
backend/app/services/: adaptive_engine.py  ai.py  auth.py  calendar.py  feedback.py  history.py  llm.py  orchestrator.py  rate_limit.py  sprints.py  stats.py  stripe_client.py  subscriptions.py  tasks.py  web_search.py  weekly_review.py
backend/app/tests/: conftest.py  test_ai.py  test_analytics.py  test_auth.py  test_billing_stripe.py  test_happy_path_flow.py  test_posthog_fallback.py  test_settings_railway.py  test_ui_smoke.py
backend/app/ui/: deps.py  router.py
backend/app/ui/routes/: adaptive_pages.py  app_pages.py  auth_pages.py  (+3 more)
(+34 files in other folders)
